# advanced-python-spring

./: .gitignore  LICENSE  README.md
hw-1/: pyproject.toml
hw-1/cli/scripts/: run_tests.py  utils.py
hw-1/cli/test/: test_mynl.py  test_mytail.py  test_mywc.py
hw-1/cli/test/artifacts/: test_mynl_simple.txt  test_mytail_simple.txt  test_mywc_simple.txt
hw-1/cli/test/artifacts/data/: file2.txt
hw-1/cli/test/resources/: test_mynl_simple.txt
hw-2/: Dockerfile  docker-compose.yml  pyproject.toml
hw-2/artifacts/: README.md  example_table.tex
hw-2/genlatex/examples/: example_table.py
hw-2/mygenlatex/examples/: example_table.py
hw-3/: pyproject.toml
hw-3/artifacts/task3/: hash.txt
hw-3/matrixcoded/: __init__.py
